objects/Employee_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_End_Date_Month__c</fullName>
        <formula>CASE( 
MONTH(End_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation End Date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Percent__c</fullName>
        <formula>IF(Total_Allocation_Hours__c != 0, (Total_Allocation_Hours__c)/(Planned_Allocation_Hours__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocation_Start_Date_Month__c</fullName>
        <formula>CASE( 
MONTH(Start_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Start Date Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Allocations</relationshipLabel>
        <relationshipName>Employee_Alocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Working_Days__c</fullName>
        <formula>CASE(MOD( Start_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( End_Date__c- Start_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( End_Date__c- Start_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( End_Date__c- Start_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( End_Date__c- Start_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( End_Date__c- Start_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( End_Date__c- Start_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( End_Date__c- Start_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( End_Date__c- Start_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Allocation_Hours__c</fullName>
        <formula>No_of_Working_Days__c *8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Allocation Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <label>Release Name</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Employee Allocations</relationshipLabel>
        <relationshipName>Employee_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Allocation_Hours__c</fullName>
        <label>Total Allocation Hours</label>
        <summarizedField>Allocation_Details__c.Allocation_Hours__c</summarizedField>
        <summaryForeignKey>Allocation_Details__c.Employee_Allocation_Details__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Start_Allocation_End_Date__c</fullName>
        <formula>IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=0, 
End_Date__c,/*Monday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=1, 
End_Date__c-1,/*Tuesday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=2, 
End_Date__c-2,/*Wednesday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=3, 
End_Date__c-3,/*Thursday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=4, 
End_Date__c-4,/*Friday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=5, 
End_Date__c-5,/*Saturday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=6, 
End_Date__c-6,/*Sunday*/ 

DATE(1878,1,1))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Start Allocation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Start_Allocation_Start_Date__c</fullName>
        <formula>IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=0, 
Start_Date__c,/*Monday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=1, 
Start_Date__c-1,/*Tuesday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=2, 
Start_Date__c-2,/*Wednesday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=3, 
Start_Date__c-3,/*Thursday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=4, 
Start_Date__c-4,/*Friday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=5, 
Start_Date__c-5,/*Saturday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=6, 
Start_Date__c-6,/*Sunday*/ 

DATE(1878,1,1))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Start Allocation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR(Release_Name__r.Proejct_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee Allocation</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Employee Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>